--- a/src/App.css
+++ b/src/App.css
@@ -8,3 +8,7 @@
 .header h1 {
   text-shadow: -1px -1px 1px rgba(255, 255, 255, 0.1), 1px 1px 1px rgba(0, 0, 0, 0.5);
 }
+
+.img-block {
+  height: 400px;
+}
