--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,14 @@
   text-shadow: -1px -1px 1px rgba(255, 255, 255, 0.1), 1px 1px 1px rgba(0, 0, 0, 0.5);
 }
 
-.img-block {
+.card {
+  height: 100%;
+}
+
+.card-img {
+  height: 200px;
+}
+
+.img-container {
   height: 400px;
 }
